@@ -65,7 +65,6 @@ class TestConventions {
 		test.jvmArgs(
 				"--add-opens=java.base/java.lang=ALL-UNNAMED",
 				"--add-opens=java.base/java.util=ALL-UNNAMED",
-				"-Djava.locale.providers=COMPAT",
 				"-Xshare:off"
 		);
 	}
